# FormalLanguages

./: CMakeLists.txt  README.md  ThePlan.md
General/: CMakeLists.txt
General/include/: ErrorHelper.h
General/include/Grammar/: CGenerativeGrammar.hpp  CGrammarBuilder.hpp  CRule.hpp  IGrammar.hpp  grammar_format_description.html  grammar_text_format_descriprion.html
General/include/Grammar/Serialization/: CGrammarDeserializer.hpp  CGrammarRepresenter.h
General/source/: ErrorHelper.cpp
General/source/Grammar/: CGenerativeGrammar.cpp  Rule.cpp
General/source/Grammar/Serialization/: CGrammarDeserializer.cpp  CGrammarRepresenter.cpp
Test/: CMakeLists.txt
Test/Answers/Grammars/Deserialization/: CBS_1_param  test_2
Test/Samples/Grammars/Text/: CBS_1  CBS_1_param  test_1  test_2
Test/include/: test_main.hpp
Test/source/: serialization_tests.cpp  test_main.cpp
